<resources>
    <string name="app_name">Ferment</string>
    <string name="Project_Title">Project Title</string>
    <string name="recipe">Recipe</string>
    <string name="enter_recipe">Enter Recipe here</string>
    <string name="fermentation_time">Fermentation Time</string>
    <string name="duration">Duration in Days:</string>
    <string name="phLevel">pH Level:</string>
    <string name="tepache">Tepache</string>
    <string name="new_project">New Project</string>
    <string name="current_projects">Current Projects</string>
    <string name="templates">Templates</string>
    <string name="three_days">Three days</string>
    <string name="hot_sauce">Hot Sauce</string>
    <string name="seven_days">Seven days</string>
    <string name="kombucha">Kombucha</string>
    <string name="ten_days">Ten days</string>
    <string name="Sauerkraut">Sauerkraut</string>
    <string name="fourteen_days">Fourteen days</string>

    <!--Tepache strings-->
    <string name="pineapple">1 whole pineapple cut into chunks and muddled</string>
    <string name="tepache_sugar">225g of brown sugar (Piloncillo if available)</string>
    <string name="tepache_ginger">Ginger. washed, trimmed and crushed</string>
    <string name="tepahe_cinnamon">1 cinnamon stick</string>
    <string name="tepache_chillis">1 chili pepper, halved</string>
    <string name="tepache_water">Top fermentation vessel with water</string>
    <string name="tepache_time">3</string>
    <string name="tepache_pH">3.5 (Ideally)</string>

    <!--Kombucha strings-->
    <string name="kombucha_water">4 litres of water</string>
    <string name="kombucha_sugar">200g of granulated suagr</string>
    <string name="kombucha_tea">30g of mixed tea (not Earl Grey)</string>
    <string name="kombucha_starter">250ml of previous batch or store bought kombucha </string>
    <string name="kombucha_scoby">1 scoby per fermentation vessel</string>
    <string name="kombucha_bottling">Flavour with fruit or juice during bottle fermentation</string>
    <string name="kombucha_duration">10</string>
    <string name="kombucha_pH">3</string>

    <!--Hot Sauce Strings-->
    <string name="hotSauce_chillies">400g of mixed chillies. Halved </string>
    <string name="hotSauce_garlic">2 garlic cloves. Crushed</string>
    <string name="hotSauce_salt">45g of salt</string>
    <string name="hotSauce_sugar">45g of sugar</string>
    <string name="hotSauce_pepper">mixed peppercorns</string>
    <string name="hotSauce_paprika">10g of smoked paprika</string>
    <string name="hotSauce_duration">7-14</string>
    <string name="hotSauce_pH">2.75</string>

    <!--Sauerkraut Strings-->
    <string name="Sauerkraut_Cabbage">500g of cabbage. Sliced and salted</string>
    <string name="Sauerkraut_Drain">Move to a jar when all water has been expelled</string>
    <string name="Sauerkraut_water">Fill jar with brine</string>
    <string name="Sauerkraut_weight">Weight cabbage down with weights</string>
    <string name="Sauerkraut_mustard">10g of mustard seeds</string>
    <string name="Sauerkraut_Cover">Seal jar with an air lock lid</string>
    <string name="Sauerkraut_duration">14</string>
    <string name="Sauerkraut_pH">3</string>

    <integer-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </integer-array>

    <string name="action_settings">Settings</string>
</resources>
